--- a/index.html
+++ b/index.html
@@ -42,11 +42,7 @@
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script>
-      //sidenav
-      const sideNav = document.querySelector('.sidenav');
-      M.Sidenav.init(sideNav, {});
-    </script>
+    <script src="/AirM/text.js"></script>
 </body>
 
 </html>
