--- a/index.html
+++ b/index.html
@@ -9,12 +9,20 @@
      <!--Let browser know website is optimized for mobile-->
      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>AirM</title>
+    <style>
+     main {padding-left: 300px;}
+      </style>
 </head>
 
 <body>
-    
+    <header>
+      <p class="exl"></p>{
+        padding-left: 300px;
+      }
+    </header>
+  
     <!-- Navbar goes here -->
-    <nav> <!-- navbar content here  --> </nav>
+    <nav> hola</nav>
 
     <ul id="slide-out" class="sidenav">
       <li><div class="user-view">
@@ -37,9 +45,17 @@
         <li><a href="#!">Second Sidebar Link</a></li>
       </ul>
       <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-  
+      <footer>
+          <p class="exl"></p>{
+             padding-left: 300px;
+          }
+      </footer>
+      <main>
+        <p>
+          hola
+        </p>
+      </main>
     <!-- Page Layout here -->
-
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="/AirM/text.js"></script>
