--- a/index.html
+++ b/index.html
@@ -12,16 +12,52 @@
     <style>
      main {padding-left: 300px;}
      header {padding-left: 300px;}
+     p.alinear {text-align: center;}
+     img.alinearfoto {display: block; margin-left: auto; margin-right: auto; border-image: round;}
+     span.pading {padding-bottom: 25px;}
+     a.botom {margin-top: 200px;}
       </style>
 </head>
 
 <body>
-  
   <header>
     <!-- Navbar goes here -->
     <ul id="slide-out" class="sidenav sidenav-fixed">
-      <li><a href="#!">First Sidebar Link</a></li>
-      <li><a href="#!">Second Sidebar Link</a></li>
+      <li><div class="user-view">
+        <div class="background">
+          <img src="https://www.yooma-hotels.com/_files/_media/1/images/restaurants/Restaurant-bar1.jpg">
+        </div>
+        <img class="circle alinearfoto" src="https://cdn.stocksnap.io/img-thumbs/960w/94RL6EIQO4.jpg">
+        <p class = "alinear flow-text " href ="#name"><span style="font-size: 100%" class="white-text name pading z-depth-3">Cucina</span></p>
+
+      </div></li>
+      <li><a href="#!">Gráficos</a></li>
+      <li><div class="divider"></div></li>
+      <li><a href="#!">Campañas de Mail</a></li>
+      <li><div class="divider"></div></li>
+      <li><a href="#!">Canjear Codigos</a></li>
+      <li><div class="divider"></div></li>
+      <li><a href="#!">Editar Portal</a></li>
+      <li><div class="divider"></div></li>
+      <li><a href="#!">Mi Cuenta</a></li>
+      <li><div class="divider"></div></li>
+      <li><a href="#!">Preguntas Frecuentes</a></li>
+      <li><div class="divider"></div></li>
+      
+      <li class="no-padding">
+        <ul class="collapsible collapsible-accordion">
+          <li>
+            <a class="collapsible-header">Campañas de Mail</a>
+            <div class="collapsible-body">
+              <ul>
+                  <li><a href="#!">Crear Nueva Campaña</a></li>
+                  <li><a href="#!">Promo1</a></li>
+                  <li><a href="#!">Promo2</a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </li>
     </ul>
     </header>
       
